<resources>
    <string name="app_name">SportDiary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_menu_training">Тренировки</string>
        <string name="nav_menu_training_tab1">Программы тренировок</string>
        <string name="nav_menu_training_tab2">Конструктор тренировок</string>
        <string name="nav_menu_training_tab3">Советы</string>
    <string name="nav_menu_mytraining">Мои тренировки</string>
    <string name="nav_menu_favourite">Избранное</string>
    <string name="nav_menu_account">Личный кабинет</string>
    <string name="nav_menu_settings">Настройки</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
